fix text align in the cards

--- a/css/style.css
+++ b/css/style.css
@@ -320,3 +320,10 @@ nav {
 .side-container{
     width: 450px;
 }
+.pad-r{
+    padding-right: 5px;
+}
+.align-text{
+    justify-content: space-between;
+    align-items: flex-start;
+}
